# esp32_live_streaming

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  camera_pins.h  connect_wifi.c  data_link.cpp  file_serving_example_common.h  idf_component.yml  main.c  mount.c  real_stats.c  server.c  spsc_rb.c  spsc_rb.h  video_stream.c
main/certs/: prvtkey.pem  servercert.pem
main/template/: index.html  upload_script.html
